evidence_library/EC2/regions/ca-central-1/allSecurityGroups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-086161c253c229381",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0ca685f975aada7d0",
            "SecurityGroupArn": "arn:aws:ec2:ca-central-1:111111111111:security-group/sg-086161c253c229381",
            "OwnerId": "111111111111",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "111111111111",
                            "GroupId": "sg-086161c253c229381"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ],
    "ResponseMetadata": {
        "RequestId": "2f68e29d-7366-4ae2-830d-8a481d5efe06",
        "HTTPStatusCode": 200,
        "HTTPHeaders": {
            "x-amzn-requestid": "2f68e29d-7366-4ae2-830d-8a481d5efe06",
            "cache-control": "no-cache, no-store",
            "strict-transport-security": "max-age=31536000; includeSubDomains",
            "content-type": "text/xml;charset=UTF-8",
            "content-length": "963",
            "date": "Fri, 06 Feb 2026 16:25:20 GMT",
            "server": "AmazonEC2"
        },
        "RetryAttempts": 0
    }
}
